[package]
name = "rustmaps_api"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.80"
tracing = { version = "0.1", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
tracing-subscriber = "0.3"
futures = "0.3"
